figuring out vs code interface

--- a/english_grammar.cfg
+++ b/english_grammar.cfg
@@ -8,9 +8,9 @@ D ->
 NP -> Nbar
 Nbar -> N | AdjP Nbar | N PP
 Tbar -> T VP
-T ->
+T -> | "must"
 VP -> Vbar
-Vbar -> Vbar PP | Vbar AdvP | V DP | V
+Vbar -> Vbar PP | Vbar AdvP | V DP | V AdjP | V
 AdjP -> Adjbar
 Adjbar -> Adj | AdvP Adjbar | Adj PP
 AdvP -> Advbar
